--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "@craco/craco": "^6.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -15,7 +16,6 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.19",
-    "@types/react": "^16.14.13",
     "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.19",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
